Refactoring, fixes and provision target runtime/JDK